--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 ipyleaflet>=0.14.0
 ipywidgets>=7.7.1
 matplotlib>=3.7.0
-numpy>=1.24.2
+numpy
 opencv-python>=4.1.2
-pandas>=1.5.3
+pandas
 psycopg2-binary>=2.9.3
 pymysql>=1.0.2
 python-dotenv>=0.20.0
